<resources>
    <string name="app_name">JdAPresencia</string>
    <string name="login_button">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_home_admin">Home</string>
    <string name="menu_gestionar_trabajadores">Gestionar trabajadores</string>
    <string name="menu_buscador_trabajadores">Buscador trabajadores</string>
    <string name="menu_mis_registros">Mis registros</string>
    <string name="menu_profile">Profile</string>

    <string name="menu_send">Send</string>
    <string name="menu_receive">Messages</string>
    <string name="menu_music">Music</string>
    <string name="menu_video">Video</string>

    <string name="boton_buscador">Buscar</string>
    <string name="boton_ver_registros">Ver registros</string>
</resources>
