<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_home_admin"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home_admin" />
        <item
            android:id="@+id/nav_gestionar_trabajadores"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_gestionar_trabajadores" />
        <item
            android:id="@+id/nav_buscador_trabajadores"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_buscador_trabajadores" />
        <item
            android:id="@+id/nav_mis_registros"
            android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
            android:title="@string/menu_mis_registros" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
                <!--android:visible="false"-->

            <item
                android:id="@+id/nav_receive"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_receive" />
        </menu>
    </item>

</menu>
