<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jdapresencia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gestionar_trabajadores"
        android:name="com.example.jdapresencia.ui.gestionar_trabajadores.GestionarTrabajadoresFragment"
        android:label="@string/menu_gestionar_trabajadores"
        tools:layout="@layout/fragment_gestionar_trabajadores" />

    <fragment
        android:id="@+id/nav_buscador_trabajadores"
        android:name="com.example.jdapresencia.ui.buscador_trabajadores.BuscadorTrabajadoresFragment"
        android:label="@string/menu_buscador_trabajadores"
        tools:layout="@layout/fragment_buscador_trabajadores" />

    <fragment
        android:id="@+id/nav_mis_registros"
        android:name="com.example.jdapresencia.ui.mis_registros.ToolsFragment"
        android:label="@string/menu_mis_registros"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.jdapresencia.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.jdapresencia.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>